fix merge errors and add Java8 syntax